# Map-My-Friends

./: .gitignore  CLAUDE.md  GEMINI.md  Makefile  README.md  TODO.md  deploy.sh
backend/: Dockerfile  airports_export.json  nginx.conf.example  pyproject.toml
backend/apps/airports/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/airports/management/commands/: import_airports.py
backend/apps/airports/migrations/: 0001_initial.py
backend/apps/people/: models.py  serializers.py  views.py
backend/apps/people/migrations/: 0004_alter_person_phone_number.py  0005_person_preferred_airport_person_preferred_station.py
backend/apps/stations/: models.py  serializers.py  urls.py  views.py
backend/apps/stations/management/commands/: import_stations.py
backend/apps/stations/migrations/: 0001_initial.py
backend/apps/trips/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/apps/trips/migrations/: 0001_initial.py  0002_alter_tripstop_person_alter_tripstop_options.py  0003_trip_status.py  0004_remove_tripstop_person_tripstop_airport_and_more.py  0005_tripstop_snapshot_address_tripstop_snapshot_metadata.py  0006_trip_end_date_trip_start_date_tripleg.py
backend/apps/users/: models.py  serializers.py  throttles.py  views.py
backend/apps/users/migrations/: 0004_alter_userprofile_phone_number.py  0005_userprofile_distance_unit.py
backend/config/: settings.py  urls.py
backend/locale/de/LC_MESSAGES/: django.po
backend/locale/es/LC_MESSAGES/: django.po
backend/locale/fr/LC_MESSAGES/: django.po
infra/: ec2.tf
(+91 files in other folders)
